# autoseg

./: .gitignore  README.md  dev_requirments.txt  setup.cfg
autoseg/: __init__.py
autoseg/base_unet/: predict.py
autoseg/lr_mtlsd_refine/: get_eval.py  get_segmentation.py  model.py  segment.py  segment_correct_blocks.py  train.py  watershed.py
autoseg/mtlsd_refine/: correct_blocks.py  model.py  predict.py
autoseg/seeded_rusty_lr_mtlsd_refine/: get_eval.py  hglom_eval_seg.py  model.py  optimize_mutex_weights_evo.py  predict.py  rusty_mws_eval_seg.py  rusty_skel_correct_seg.py
setups/lr_mtlsd_refine/: get_segmentation.py  predict.py  watershed.py
setups/mtlsd_refine/: clean.py  model.py  predict.py  rusty_mws_eval_seg.py  train.py  watershed.py
setups/seeded_rusty_lr_mtlsd_refine/: get_eval.py  handoff.md  model.py  optimize_mutex_weights_evo.py  rinseless_train.py  rusty_mws_eval_seg.py  rusty_skel_correct_seg.py  train.py
setups/setup02/: train.py
setups/setup03/: train.py
setups/setup05/: notes.kill  train.py
setups/setup06/: retrain.sh  train.py
setups/setup07/: retrain.sh  train.py
setups/setup08/: retrain.sh  train.py
setups/setup09/: retrain.sh  train.py
setups/setup10/: config.py  model.py  predict.py  retrain.sh  segment.py  train.py
setups/setup11/: config.py  model.py  retrain.sh  segment.py  train.py
setups/setup11.01/: config.py  model.py  predict.py  retrain.sh  segment.py  train.py
setups/setup15.1/: model.py  predict.py  retrain.sh  train.py
setups/setup16/: aff_model.py  config.py  correct_seg.py  evaluate_all.py  filtered_segment.py  fragments.py  get_eval.py  get_segmentation.py  model.py  predict.py  predict_old.py  resegment.sh  retrain.sh  segment.py  segment_correct_blocks.py  train.py  unseeded_segment.py  unseeded_segment_blocks.py  view.py
setups/setup16.1/: aff_model.py  config.py  model.py  train.py
src/autoseg/: utils.py
src/autoseg/base_unet/: __init__.py  predict.py
src/autoseg/lr_mtlsd_refine/: get_eval.py  model.py  predict.py  segment.py  segment_correct_blocks.py  train.py
src/autoseg/mtlsd_refine/: clean.py  rusty_mws_eval_seg.py  train.py  watershed.py
src/autoseg/seeded_rusty_lr_mtlsd_refine/: hglom_eval_seg.py  rinseless_train.py  train.py
tests/: sample_test.py
