[metadata]
name = autoseg
version = 0.1.0
author = Brian Reicher
author_email = reicher.b@northeastern.edu
url = https://github.com/brianreicher/autoseg
description = An algorithmic toolbox for automated deep learning image segmentation.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = parallel-computing, image-segmentation, mutex-watershed
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3


[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    numpy
    pymongo
    scikit-image
    daisy
    zarr
    mwatershed @ git+https://github.com/pattonw/mwatershed
    funlib.geometry @ git+https://github.com/funkelab/funlib.geometry
    funlib.persistence @ git+https://github.com/funkelab/funlib.persistence
    funlib.segment @ git+https://github.com/funkelab/funlib.segment
    gunpowder @ git+https://github.com/funkey/gunpowder

[options.packages.find]
where=src

